@@ -7,6 +7,7 @@
 + *tetragono*: Add =__contains__= and =__len__= for hamiltonians handle of abstract state.
 + *bridge*: Add support for bridging from TNSP new format.
 + *tetragono*: Stop saving configuration for ergodic sampling method during gradient descent.
++ *tetragono*: Add function to convert sampling lattice back to simple update lattice.
 *** Changed
 + *TAT.py*: Use =scikit-build-core= as build backend. =MAKEFLAGS= and =CMAKEFLAGS= are droped. Use =scikit-build-core=
   environment variable =SKBUILD_CMAKE_ARGS= to pass arguments to cmake command line when building =PyTAT= wheel.
